--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <p>Have our AI personally find emails for you. Perfect for sales teams, marketers, and recruiters.</p>
         <div>
             <a href="{{ url_for('pricing') }}" class="btn btn-primary">Get Started</a>
-            <a href="#" class="btn btn-outline">Learn More</a>
+            <a href="{{ url_for('about') }}" class="btn btn-outline">Learn More</a>
         </div>
     </div>
 </section>
